Fix mobile overflow issue

--- a/assets/css/tedx.scss
+++ b/assets/css/tedx.scss
@@ -18,6 +18,10 @@ html {
   background: $dark;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .page-title {
 		font-weight: 600;
 }
